final touches for deliverable 2!

--- a/Model & Analysis/Modeling_Analysis.ipynb
+++ b/Model & Analysis/Modeling_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1660,7 +1660,7 @@
     "plt.gca().yaxis.set_major_formatter(mtick.PercentFormatter(xmax = 1))\n",
     "plt.xlabel('Test Set')\n",
     "plt.ylabel('Mean Absolute Percent Error (MAPE)')\n",
-    "plt.title('MAPE Results by Account: Hyperparameter-Tuned SARIMA')"
+    "plt.title('MAPE Results by Account: FB Prophet Chosen Parameters')"
    ]
   },
   {
@@ -5530,7 +5530,7 @@
     "plt.gca().yaxis.set_major_formatter(mtick.PercentFormatter(xmax = 1))\n",
     "plt.xlabel('Test Set')\n",
     "plt.ylabel('Mean Absolute Percent Error (MAPE)')\n",
-    "plt.title('MAPE Results by Account: Hyperparameter-Tuned SARIMA')"
+    "plt.title('MAPE Results by Account: Hyperparameter-Tuned FB Prophet')"
    ]
   },
   {
@@ -5779,13 +5779,6 @@
    "source": [
     "account_results[['account_mape_1', 'account_mape_2', 'account_mape_3']].median()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
